# HeartDD

./: .gitignore  README.md  config.ini  detection.proto  pyproject.toml  requirements.txt  start.py
client/: bulk_client.py  canvas_shape.py  client.py  config.py  detection_pb2.py  detection_pb2.pyi  file_handler.py  server_communicator.py  start_client.py  window_controller.py
client/testing/: box_test3.py  client_test.py
detection_grpc/: detection_pb2.py  detection_pb2_grpc.py
preprocessing/: mask_images.py  mask_to_pixel.py  split_dataset.py
protos/: detection.proto
server/: config.py  detection_pb2.py  detection_pb2.pyi  detection_pb2_grpc.py  endpoints.py  server.py
server/description/: layers.py  lesion_desriber.py  skeletonization.py  train.py  utils.py
server/description/characteristics/: __init__.py  bifurcation_classifier.py  blunt_stump_classifier.py  charasteristic_classifier.py  heavy_calcification_classifier.py  severe_tortuosity_classifier.py  thrombus_classifier.py  total_oclusion.py
server/description/weights/: thrombus_model.pkl  thrombus_prob_model.pkl
server/detection/: detect.py  detect_test.py  roi.test.py  roi_metrics.py
src/hdd/: download_weights.py
src/hdd/client/: canvas_shape.py  client.py  detection_pb2_grpc.py  file_handler.py  server_communicator.py  window_controller.py
src/hdd/heartdd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hdd/preprocessing/: img_augementor.py  make_yolo_annotations.py  mask_to_pixel.py
src/hdd/server/: detection_pb2.py  endpoints.py  (+3 more)
src/heartdd.egg-info/: SOURCES.txt
(+15 files in other folders)
